<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="F_TurboExtILK_NO_1" Id="{a8dfe7f9-5324-46a7-9f13-de5ec630395c}" SpecialFunc="None">
    <Declaration><![CDATA[(* This function Block interfaces with a NO turbo valve*)
(* Mainly used in the FEE HXR GATT*)
FUNCTION F_TurboExtILK_NO_1 : BOOL
VAR_INPUT
    Turbo		:	ST_PTM;
    BackingGauge:	ST_VG;
    InletGauge	:	ST_VG;
    VentValve	:	ST_VCC_NO; //NO type turbo valve
    ScrollPump	:	ST_RoughPump;
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"F_TurboExtILK_NO_1"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">59L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeBox">
                        <v n="BoxType">"AND"</v>
                        <o n="Instance" t="Operand">
                          <n n="Operand" />
                          <v n="Type">""</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">9L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems">
                            <n />
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems">
                          <o t="BoxTreeBox">
                            <v n="BoxType">"AND"</v>
                            <o n="Instance" t="Operand">
                              <n n="Operand" />
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">true</v>
                              <v n="Id">11L</v>
                            </o>
                            <o n="OutputItems" t="OutputItemList">
                              <l2 n="OutputItems" />
                            </o>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <n n="InputFlags" />
                            <l2 n="InputItems" cet="BoxTreeOperand">
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"VentValve.xCLS_DO"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">14L</v>
                                </o>
                                <v n="Id">13L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"ScrollPump.q_xRunDo"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">16L</v>
                                </o>
                                <v n="Id">15L</v>
                              </o>
                            </l2>
                            <o n="InputParam" t="ParamList">
                              <l2 n="Names" />
                              <l2 n="Types" />
                            </o>
                            <o n="OutputParam" t="ParamList">
                              <l2 n="Names" />
                              <l2 n="Types" />
                            </o>
                            <v n="CallType" t="Operator">And</v>
                            <n n="EN" />
                            <n n="ENO" />
                            <n n="STSnippet" />
                            <v n="ContainsExtensibleInputs">false</v>
                            <v n="ProvidesSTSnippet">false</v>
                            <v n="Id">12L</v>
                          </o>
                          <o t="BoxTreeBox">
                            <v n="BoxType">"LT"</v>
                            <o n="Instance" t="Operand">
                              <n n="Operand" />
                              <v n="Type">""</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">true</v>
                              <v n="Id">17L</v>
                            </o>
                            <o n="OutputItems" t="OutputItemList">
                              <l2 n="OutputItems">
                                <n />
                              </l2>
                            </o>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <n n="InputFlags" />
                            <l2 n="InputItems" cet="BoxTreeOperand">
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"InletGauge.xPRESS_OK"</v>
                                  <v n="Type">"BOOL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">true</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">true</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">20L</v>
                                </o>
                                <v n="Id">19L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"InletGauge.rPRESS"</v>
                                  <v n="Type">"REAL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">22L</v>
                                </o>
                                <v n="Id">21L</v>
                              </o>
                              <o>
                                <o n="Operand" t="Operand">
                                  <v n="Operand">"Turbo.rInletPressureSP"</v>
                                  <v n="Type">"REAL"</v>
                                  <v n="Comment">""</v>
                                  <v n="SymbolComment">""</v>
                                  <v n="Address">""</v>
                                  <o n="Flags" t="Flags">
                                    <v n="Flags">0</v>
                                    <v n="Fixed">false</v>
                                    <v n="Extensible">false</v>
                                  </o>
                                  <v n="LValue">false</v>
                                  <v n="Boolean">false</v>
                                  <v n="IsInstance">false</v>
                                  <v n="Id">24L</v>
                                </o>
                                <v n="Id">23L</v>
                              </o>
                            </l2>
                            <o n="InputParam" t="ParamList">
                              <l2 n="Names" cet="String">
                                <v>EN</v>
                              </l2>
                              <l2 n="Types" cet="String">
                                <v>BOOL</v>
                              </l2>
                            </o>
                            <o n="OutputParam" t="ParamList">
                              <l2 n="Names" cet="String">
                                <v></v>
                              </l2>
                              <l2 n="Types" cet="String">
                                <v>BOOL</v>
                              </l2>
                            </o>
                            <v n="CallType" t="Operator">Lt</v>
                            <v n="EN">true</v>
                            <v n="ENO">false</v>
                            <n n="STSnippet" />
                            <v n="ContainsExtensibleInputs">false</v>
                            <v n="ProvidesSTSnippet">false</v>
                            <v n="Id">18L</v>
                          </o>
                          <o t="BoxTreeOperand">
                            <o n="Operand" t="Operand">
                              <v n="Operand">"BackingGauge.xPRESS_OK"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">true</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">28L</v>
                            </o>
                            <v n="Id">27L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" />
                          <l2 n="Types" />
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v></v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">And</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">10L</v>
                      </o>
                      <v n="Id">34L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">8L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" />
                  <l2 n="Connectors" />
                  <v n="Id">7L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>